display of additional data in the incident update forms

--- a/psc/templates/psc/dco_incident_update_form.html
+++ b/psc/templates/psc/dco_incident_update_form.html
@@ -9,7 +9,11 @@
 						<div class="block">
 								<table>
 										<tr><td>Observer:</td><td>{{ incident.observer.name }} (<strong>{{ incident.observer.observer_id  }}</strong>)<input name='observer' type='hidden' value='{{ incident.observer.id }}'></td></tr>
-										<tr><td>Date:</td><td>{{ incident.date|date:"D d-M" }}<input name='date' type='hidden' value='{{ incident.date }}'></td></tr>
+										<tr><td>Observer Phone No.:</td><td><strong>{{ incident.observer.phone }}</strong></td></tr>
+										<tr><td>Location:</td><td><strong>{{ location.parent.parent.parent.name }} - {{ location.parent.parent.name }} - {{ location.parent.name }} - {{ location.name }}</strong></td></tr>
+										<tr><td>Date:</td><td>{{ incident.date|date:"D d-M" }}</td></tr>
+										<tr><td>LGA:</td><td>{{ incident.location.parent.name }}</td></tr>
+										<tr><td>RC:</td><td>{{ incident.location.name }}</td></tr>
 								</table>
 						</div>
 						<div class="clear"></div>
