more data being displayed in the checklist

--- a/psc/templates/psc/vr_checklist_form.html
+++ b/psc/templates/psc/vr_checklist_form.html
@@ -3,13 +3,26 @@
 {% block content %}
     <div class="grid_16">
         <div class="box">
-            <h2><span class="indicator">1st SMS</span>Checklist Details</h2>
+						<h2>Observer Details</h2>
 						<form method="POST" action="{% url psc.views.vr_checklist checklist.id %}">
 								<div class="block">
 										<!-- checklist details -->
 										<table>
-												<tr><td>Observer:</td><td>{{ checklist.observer.name }} (<strong>{{ checklist.observer.observer_id  }}</strong>)</td></tr>
-												<tr><td>Date:</td><td>{{ checklist.date|date:"D d-M" }}</td></tr>
+												<tr><td width="30%">Observer:</td><td>{{ checklist.observer.name }} (<strong>{{ checklist.observer.observer_id  }}</strong>)</td></tr>
+												<tr><td>Observer Phone No.:</td><td><strong>{{ checklist.observer.phone  }}</strong></td></tr>
+												<tr><td>Supervisor:</td><td>{{ checklist.observer.supervisor|default:"" }} {% if checklist.observer.supervisor %}(<strong>{{ checklist.observer.supervisor.phone  }}</strong>){% endif %}</td></tr>
+												<tr><td>Location:</td><td><strong>{{ location.parent.parent.parent.name }} - {{ location.parent.parent.name }} - {{ location.parent.name }} - {{ location.name }}</strong></td></tr>
+										</table>
+								</div>
+								<div class="clear"></div>
+								<h2><span class="indicator">1st SMS</span>Checklist Details</h2>
+								<!-- opening checklist question -->
+								<div class='block'>
+										<!-- checklist details -->
+										<table>
+												<tr><td width="30%">Date:</td><td>{{ checklist.date|date:"D d-M" }}</td></tr>
+												<tr><td>LGA:</td><td>{{ incident.location.parent.name|default:"Unknown" }}</td></tr>
+												<tr><td>RC:</td><td>{{ incident.location.name|default:"Unknown" }} {% if incident.location %}(<strong>{{ incident.location.code }}</strong>){% endif %}</td></tr>
 										</table>
 								</div>
 								<div class="clear"></div>
