--- a/psc/templates/psc/vr_incident_list.html
+++ b/psc/templates/psc/vr_incident_list.html
@@ -68,7 +68,7 @@
                         <th>N</th>
                         <th>P</th>
                         <th>Q</th>
-                        <th><a href="{% url psc.views.vr_incident_add  %}">Add Incident</a></th>
+                        <th class="checklist"><button onclick='location.href="{% url psc.views.vr_incident_add  %}"'>Add Incident</button></th>
                     </tr>
                 </thead>
 				{% for cl in checklists.object_list %}
@@ -149,7 +149,7 @@
                         <img src="/assets/img/status-busy.png" width="16" height="16" alt="complete" />
 						{% endif %}
                     </td>
-                    <td><a href="{% url psc.views.vr_incident_update cl.id %}">Edit</a></td>
+                    <td class="checklist"><a href="{% url psc.views.vr_incident_update cl.id %}">Edit</a></td>
                 </tr>
 				{% empty %}
                 <tr>
