--- a/psc/templates/psc/vr_checklist_list.html
+++ b/psc/templates/psc/vr_checklist_list.html
@@ -54,7 +54,6 @@
                         <th>LGA</th>
                         <th>State/SD</th>
                         <th>Observer</th>
-                        <th>Phone</th>
                         <th>Supervisor</th>
                         <th class="checklist">1st</th>
                         <th class="checklist">2nd</th>
@@ -68,9 +67,8 @@
                     <td>{{ cl.date|date:"D d-M" }}</td>
                     <td>{{ cl.observer.location.name|default:"Uknown" }}</td>
                     <td>{{ cl.observer.location.parent.name|default:"Uknown"|truncatewords:3 }}</td>
-                    <td>{{ cl.observer.name }}</td>
-                    <td>{{ cl.observer.phone }}</td>
-                    <td>{{ cl.observer.supervisor.name }}</td>
+                    <td>{{ cl.observer.name|truncatewords:2 }}{% if cl.observer.phone %} (<strong>{{ cl.observer.phone }}</strong>){% endif %}</td>
+                    <td>{{ cl.observer.supervisor.name|truncatewords:2 }}{% if cl.observer.supervisor.phone %} (<strong>{{ cl.observer.supervisor.phone }}</strong>){% endif %}</td>
                     <td class="checklist">
 					{% if cl.submitted %}
                         <img src="/assets/img/status.png" width="16" height="16" alt="complete" />
