--- a/psc/templates/psc/layout.html
+++ b/psc/templates/psc/layout.html
@@ -53,6 +53,7 @@
                     <li class=" secondary logout">
                            <a href="{% url django.contrib.auth.views.logout_then_login %}">Logout</a>
                     </li>
+										{% if user.is_superuser %}
                     <li class="secondary">
                         <a href="#" title="" style="width:14.3em;text-align:left">System Administration</a>
                         <ul>
@@ -64,7 +65,7 @@
                             </li>
                         </ul>
                     </li>
-
+										{% endif %}
                 </ul>
                 {% endif %}
             </div>
