refactoring filtering and updating the dashboard

--- a/psc/templates/psc/home.html
+++ b/psc/templates/psc/home.html
@@ -4,7 +4,7 @@
         <div class="box">
             <h2>Dashboard</h2>
             <div class="box dashboard">
-                <div class="controls">
+                <!--<div class="controls">
                
                 <form method="get">
                      Filter by Zone
@@ -19,22 +19,22 @@
                 </select>
                 <input name="Go" value="GO" type="submit" style="height: 38px; font-size: 25px">
                 </form>
-                </div>
+                </div>-->
                 <table width="100%" class="dashboard">
                     <tr>
-                        <td>
+                        <td width="50%">
                             <div class="box compartment">
                                 <h2 class="dashboard-header"><a href="#">VR Checklists </a></h2>
                                  <div class="dash-row">
-                                     <div class="dash-column first">How many missing 1st SMS</div>
+                                     <div class="dash-column first">Missing 1st SMS</div>
                                      <div class="dash-column second"><span>{{ missing_first_sms }}</span></div>
                                 </div>
                                  <div class="dash-row">
-                                     <div class="dash-column first">How many missing 2nd SMS</div>
+                                     <div class="dash-column first">Missing 2nd SMS</div>
                                      <div class="dash-column second"><span>{{ missing_second_sms }}</span></div>
                                 </div>
                                  <div class="dash-row">
-                                     <div class="dash-column first">How many missing 3rd SMS</div>
+                                     <div class="dash-column first">Missing 3rd SMS</div>
                                      <div class="dash-column second"><span>{{ missing_third_sms }}</span></div>
                                 </div>
                                 <div class="dash-row last">
@@ -50,15 +50,15 @@
                                 <h2 class="dashboard-header"><a href="#">DCO Checklists </a></h2>
                                 <div class="dash-row">
                                     <div class="dash-column first">1st Report</div>
-                                    <div class="dash-column second"><span> NE, SW, SS</span></div>
+                                    <div class="dash-column second"><span>{{ dco_checklist_first_today }}</span></div>
                                 </div>
                                 <div class="dash-row">
                                      <div class="dash-column first">2nd Report</div>
-                                     <div class="dash-column second"><span>39</span></div>
+                                     <div class="dash-column second"><span>{{ dco_checklist_second_today }}</span></div>
                                 </div>
                                 <div class="dash-row">
                                      <div class="dash-column first">3rd Report</div>
-                                     <div class="dash-column second"><span>NE, SW, SS</span></div>
+                                     <div class="dash-column second"><span>{{ dco_checklist_third_today }}</span></div>
                                 </div>
                                 <div class="dash-row last">
                                      <div class="dash-text"><a href="{% url psc.views.dco_checklist_list %}">(View All)</a></div>
@@ -74,12 +74,12 @@
                             <div class="box compartment">
                                 <h2 class="dashboard-header"><a href="#">VR Incidents</a></h2>
                                 <div class="dash-row">
-                                     <div class="dash-column first">Total number of incidents</div>
-                                     <div class="dash-column second"><span>39</span></div>
+                                     <div class="dash-column first">Incidents rec'd today</div>
+                                     <div class="dash-column second"><span>{{ vr_incidents_today }}</span></div>
                                 </div>
                                  <div class="dash-row">
-                                     <div class="dash-column first">Total number of incidents </div>
-                                     <div class="dash-column second"><span class="dash-num">39</span></div>
+                                     <div class="dash-column first">Total incidents rec'd</div>
+                                     <div class="dash-column second"><span class="dash-num">{{ vr_incidents_count }}</span></div>
                                 </div>
                                 <div class="dash-row last">
                                      <div class="dash-text"><a href="{% url psc.views.vr_incident_add %}">(Add Incident)</a> <span class="divider">|</span> <a href="{% url psc.views.vr_incident_list %}">(View All)</a></div>
@@ -92,12 +92,12 @@
                             <div class="box compartment">
                                 <h2 class="dashboard-header"><a href="#">DCO Incidents</a></h2>
                                 <div class="dash-row">
-                                     <div class="dash-column first">Total number of incidents</div>
-                                     <div class="dash-column second"><span>39</span></div>
+                                     <div class="dash-column first">Incidents rec'd today</div>
+                                     <div class="dash-column second"><span>{{ dco_incidents_today }}</span></div>
                                 </div>                                
                                  <div class="dash-row">
-                                     <div class="dash-column first">Total number of incidents</div>
-                                     <div class="dash-column second"><span>39</span></div>
+                                     <div class="dash-column first">Total incidents rec'd</div>
+                                     <div class="dash-column second"><span>{{ dco_incidents_count }}</span></div>
                                 </div>
                                 <div class="dash-row last">
                                      <div class="dash-text"><a href="{% url psc.views.dco_incident_add %}">(Add Incident)</a> | <a href="{% url psc.views.dco_incident_list %}">(View All)</div>
