--- a/psc/templates/psc/vr_checklist_list.html
+++ b/psc/templates/psc/vr_checklist_list.html
@@ -81,14 +81,17 @@
 						{% if cl.D1 or cl.D2 or cl.D3 or cl.D4 %}
 							{% if cl.E1 or cl.E2 or cl.E3 or cl.E4 or cl.E5 %}
                         <img src="/assets/img/status.png" width="16" height="16" alt="complete" />
+							{% else %}
+                        <img src="/assets/img/status-away.png" width="16" height="16" alt="incomplete" />
 							{% endif %}
+						{% else %}
+                        <img src="/assets/img/status-away.png" width="16" height="16" alt="incomplete" />
 						{% endif %}
 					{% else %}
 					{% if cl.A or cl.B or cl.C or cl.D1 or cl.D2 or cl.D3 or cl.D4 or cl.E1 or cl.E2 or cl.E3 or cl.E4 or cl.E5 or cl.F or cl.G %}
                         <img src="/assets/img/status-away.png" width="16" height="16" alt="incomplete" />
 					{% else %}
                         <img src="/assets/img/status-busy.png" width="16" height="16" alt="none" />
-					{% endif %}
 					{% endif %}
                     </td>
                     <td class="checklist">
@@ -99,7 +102,6 @@
                         <img src="/assets/img/status-away.png" width="16" height="16" alt="incomplete" />
 					{% else %}
                         <img src="/assets/img/status-busy.png" width="16" height="16" alt="none" />
-					{% endif %}
 					{% endif %}
                     </td>
                     <td><a href="{% url psc.views.vr_checklist cl.id %}">Edit</a></td>
