--- a/psc/templates/psc/vr_incident_list.html
+++ b/psc/templates/psc/vr_incident_list.html
@@ -77,8 +77,7 @@
                     <td>{{ cl.date|date:"D d-M" }}</td>
 										{% if cl.observer.role == "NS" or cl.observer.role == "NSC" or cl.observer.role == "SC" or cl.observer.role == "SDC" %}
                     <td>{{ cl.location.parent.name }}</td>
-                    <!--<td>{{ cl.observer.location.name|default:"Unknown" }}</td>-->
-                    <td>{{ cl.location.parent.parent.parent.name|default:"Unknown" }}</td>
+                    <td>{{ cl.observer.location.name|default:"Unknown" }}</td>
 										{% else %}
                     <td>{{ cl.location.parent.name }}</td>
                     <td>{{ cl.location.parent.parent.parent.name|default:"Unknown" }}</td>
